kubernetes/gateway-api/traefik/wms-real/07-httproute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: wms
spec:
  parentRefs:
  - name: wms-gateway
    namespace: traefik
  hostnames:
  - "api.datanetwork.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backend
      port: 5000
      namespace: wms
